# my_template_repo

./: .gitignore  LICENSE  README.md  copier.yml  pyproject.toml
.agents/: .skill-lock.json  SKILL_STRUCTURE.md
.agents/skills/agentic-development/: SKILL.md
.agents/skills/application-development/: SKILL.md
.agents/skills/code-quality/: SKILL.md
.agents/skills/data-engineering/: SKILL.md
.agents/skills/data-science/: SKILL.md
.agents/skills/design-infrastructure/: SKILL.md
.agents/skills/design-system/: SKILL.md
.agents/skills/git-workflow/: SKILL.md
.agents/skills/microsoft-foundry/: SKILL.md
.agents/skills/microsoft-foundry/foundry-agent/create/: create.md
.agents/skills/microsoft-foundry/foundry-agent/deploy/: deploy.md
.agents/skills/microsoft-foundry/foundry-agent/invoke/: invoke.md
.agents/skills/microsoft-foundry/foundry-agent/troubleshoot/: troubleshoot.md
.agents/skills/mlops/: SKILL.md
.agents/skills/observability/: SKILL.md
.agents/skills/write-skills/: SKILL.md
.github/scripts/: sync-todo.ps1
application/: AI.md  pyproject.toml
application/src/: config.py
application/src/utils/: m_log.py
application/tests/: conftest.py
application/tests/utils/: test_m_commit.py
application/tools/: commit.py
base/: .gitignore  AI.md  pyproject.toml
base/src/: config.py
base/tests/: conftest.py  test_main.py
base/tests/tools/: test_commit.py
ml/: .gitignore  AI.md  README.md  main.py  pyproject.toml
ml/.github/workflows/: ci.yml
ml/src/: config.py
ml/src/utils/: m_commit.py
ml/tests/utils/: test_m_log.py
tools/: commit.py
