[project]
name = "my-template-repo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.5.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
commit-msg = "tools.commit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
